--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=admin@postgres.com
 PGADMIN_DEFAULT_PASSWORD=postgres
+API_HOST=http://localhost:55555
