--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=admin@postgres.com
 PGADMIN_DEFAULT_PASSWORD=postgres
 API_HOST=http://localhost:55555
+API_KEY=apikey
