--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,3 +4,33 @@ SQLAlchemy==2.0.25
 psycopg2-binary==2.9.9
 flask_swagger_ui==4.11.1
 flask_cors==5.0.1
+certifi==2025.4.26
+charset-normalizer==3.4.2
+colorama==0.4.6
+filelock==3.18.0
+fsspec==2025.5.1
+idna==3.10
+Jinja2==3.1.6
+joblib==1.5.1
+kagglehub==0.3.12
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.5
+numpy==2.2.6
+packaging==25.0
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.3
+scikit-learn==1.7.0
+scipy==1.15.3
+setuptools==80.9.0
+six==1.17.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.7.1
+tqdm==4.67.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.4.0
